k8s/helm/victoria-metrics-helm.yaml
---
# Source: victoria-metrics-cluster/templates/extra-objects.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-metrics-vminsert-egress
  namespace: victoria-metrics
spec:
  podSelector:
    matchLabels:
      app: vminsert
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - podSelector:
        matchLabels:
          app: vmstorage
          app.kubernetes.io/instance: victoria-metrics
          app.kubernetes.io/name: victoria-metrics-cluster
    ports:
    - protocol: TCP
      port: 8400
---
# Source: victoria-metrics-cluster/templates/extra-objects.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-metrics-vmselect-egress
  namespace: victoria-metrics
spec:
  podSelector:
    matchLabels:
      app: vmselect
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  - to:
    - podSelector:
        matchLabels:
          app: vmstorage
          app.kubernetes.io/instance: victoria-metrics
          app.kubernetes.io/name: victoria-metrics-cluster
    ports:
    - protocol: TCP
      port: 8401
---
# Source: victoria-metrics-cluster/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-metrics-victoria-metrics-cluster-vminsert
  namespace: victoria-metrics
  labels: 
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: victoria-metrics-cluster-0.52.0
spec:
  podSelector:
    matchLabels: 
      app: vminsert
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: opentelemetry-collector
        podSelector:
          matchLabels:
            app.kubernetes.io/component: opentelemetry-collector
      ports:
      - port: 8480
        protocol: TCP
---
# Source: victoria-metrics-cluster/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: victoria-metrics-victoria-metrics-cluster-vmselect
  namespace: victoria-metrics
  labels: 
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: victoria-metrics-cluster-0.52.0
spec:
  podSelector:
    matchLabels: 
      app: vmselect
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  ingress: 
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: monitoring
        podSelector:
          matchLabels:
            app.kubernetes.io/instance: grafana
            app.kubernetes.io/name: grafana
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: opencost
        podSelector:
          matchLabels:
            app.kubernetes.io/instance: opencost
            app.kubernetes.io/name: opencost
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: keda
        podSelector:
          matchLabels:
            app.kubernetes.io/instance: keda
            app.kubernetes.io/name: keda-operator
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: opentelemetry-collector
        podSelector:
          matchLabels:
            app.kubernetes.io/component: opentelemetry-collector
            app.kubernetes.io/instance: opentelemetry-collector.prometheus
      ports:
      - port: 8481
        protocol: TCP
---
# Source: victoria-metrics-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app.kubernetes.io/component: vminsert
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
  name: victoria-metrics-victoria-metrics-cluster-vminsert
  namespace: victoria-metrics
spec:
  type: ClusterIP
  ports: 
    
    - name: http
      port: 8480
      protocol: TCP
      targetPort: http
  selector: 
    app: vminsert
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-cluster
---
# Source: victoria-metrics-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app.kubernetes.io/component: vmselect
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
  name: victoria-metrics-victoria-metrics-cluster-vmselect
  namespace: victoria-metrics
spec:
  type: ClusterIP
  ports: 
    
    - name: http
      port: 8481
      protocol: TCP
      targetPort: http
  selector: 
    app: vmselect
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-cluster
---
# Source: victoria-metrics-cluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels: 
    app.kubernetes.io/component: vmstorage
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
  name: victoria-metrics-victoria-metrics-cluster-vmstorage
  namespace: victoria-metrics
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports: 
    
    - name: http
      port: 8482
      targetPort: http
      protocol: TCP
    - port: 8401
      targetPort: vmselect
      protocol: TCP
      name: vmselect
    - port: 8400
      targetPort: vminsert
      protocol: TCP
      name: vminsert
  selector: 
    app: vmstorage
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/name: victoria-metrics-cluster
---
# Source: victoria-metrics-cluster/templates/vminsert-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels: 
    app.kubernetes.io/component: vminsert
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
  name: victoria-metrics-victoria-metrics-cluster-vminsert
  namespace: victoria-metrics
spec:
  selector:
    matchLabels: 
      app: vminsert
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  template:
    metadata:
      labels: 
        app: vminsert
        app.kubernetes.io/component: vminsert
        app.kubernetes.io/instance: victoria-metrics
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-metrics-cluster
    spec:
      containers:
        - name: vminsert
          image: victoriametrics/vminsert:v1.153.0-cluster
          imagePullPolicy: IfNotPresent
          args: 
            - --envflag.enable
            - --envflag.prefix=VM_
            - --httpListenAddr=:8480
            - --loggerFormat=json
            - --storageNode=victoria-metrics-victoria-metrics-cluster-vmstorage-0.victoria-metrics-victoria-metrics-cluster-vmstorage.victoria-metrics.svc.cluster.local.:8400
          ports:
            - name: http
              containerPort: 8480
          readinessProbe: 
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 15
            tcpSocket:
              port: http
            timeoutSeconds: 5
          resources: 
            limits:
              memory: 1Gi
            requests:
              cpu: 80m
              memory: 250Mi
      serviceAccountName: victoria-metrics-victoria-metrics-cluster
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 30
---
# Source: victoria-metrics-cluster/templates/vmselect-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: victoria-metrics-victoria-metrics-cluster-vmselect
  namespace: victoria-metrics
  labels: 
    app.kubernetes.io/component: vmselect
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
spec:
  strategy: {}
  selector:
    matchLabels: 
      app: vmselect
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  template:
    metadata:
      labels: 
        app: vmselect
        app.kubernetes.io/component: vmselect
        app.kubernetes.io/instance: victoria-metrics
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-metrics-cluster
    spec:
      serviceAccountName: victoria-metrics-victoria-metrics-cluster
      automountServiceAccountToken: true
      securityContext: 
        {}
      containers:
        - name: vmselect
          securityContext: 
            {}
          image: victoriametrics/vmselect:v1.153.0-cluster
          imagePullPolicy: IfNotPresent
          args: 
            - --cacheDataPath=/cache
            - --envflag.enable
            - --envflag.prefix=VM_
            - --httpListenAddr=:8481
            - --loggerFormat=json
            - --storageNode=victoria-metrics-victoria-metrics-cluster-vmstorage-0.victoria-metrics-victoria-metrics-cluster-vmstorage.victoria-metrics.svc.cluster.local.:8401
          ports:
            - name: http
              containerPort: 8481
          readinessProbe: 
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe: 
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 15
            tcpSocket:
              port: http
            timeoutSeconds: 5
          resources: 
            limits:
              memory: 512Gi
            requests:
              cpu: 10m
              memory: 60Mi
          volumeMounts:
            - mountPath: /cache
              name: cache-volume
            
      terminationGracePeriodSeconds: 60
      volumes:
        - name: cache-volume
          emptyDir: 
            {}
---
# Source: victoria-metrics-cluster/templates/vmstorage-server.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels: 
    app.kubernetes.io/component: vmstorage
    app.kubernetes.io/instance: victoria-metrics
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-metrics-cluster
    app.kubernetes.io/version: v1.153.0-cluster
    helm.sh/chart: victoria-metrics-cluster-0.52.0
  name: victoria-metrics-victoria-metrics-cluster-vmstorage
  namespace: victoria-metrics
spec:
  serviceName: victoria-metrics-victoria-metrics-cluster-vmstorage
  selector:
    matchLabels: 
      app: vmstorage
      app.kubernetes.io/instance: victoria-metrics
      app.kubernetes.io/name: victoria-metrics-cluster
  replicas: 1
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels: 
        app: vmstorage
        app.kubernetes.io/component: vmstorage
        app.kubernetes.io/instance: victoria-metrics
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: victoria-metrics-cluster
    spec:
      containers:
        - name: vmstorage
          image: victoriametrics/vmstorage:v1.153.0-cluster
          imagePullPolicy: IfNotPresent
          args: 
            - --envflag.enable
            - --envflag.prefix=VM_
            - --httpListenAddr=:8482
            - --loggerFormat=json
            - --retentionPeriod=1y
            - --storageDataPath=/storage
          ports:
            - name: http
              containerPort: 8482
            - name: vminsert
              containerPort: 8400
            - name: vmselect
              containerPort: 8401
          readinessProbe: 
            failureThreshold: 10
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          resources: 
            limits:
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1.5Gi
          volumeMounts:
            - name: vmstorage-volume
              mountPath: /storage
            
      serviceAccountName: victoria-metrics-victoria-metrics-cluster
      automountServiceAccountToken: true
      topologySpreadConstraints:
        - labelSelector:
            matchLabels:
              app: vmstorage
              app.kubernetes.io/instance: victoria-metrics
              app.kubernetes.io/name: victoria-metrics-cluster
          maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
      terminationGracePeriodSeconds: 60
  minReadySeconds: 5
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: vmstorage-volume
      spec:
        accessModes: 
          - ReadWriteOnce
        resources:
          requests:
            storage: 128Gi
        storageClassName: topolvm-hdd
